Simplify legal pages to match app version

--- a/privacy.html
+++ b/privacy.html
@@ -67,67 +67,74 @@
         <a href="index.html" class="back-link">← Torna alla home</a>
 
         <h1>Privacy Policy</h1>
-        <p class="last-updated">Ultimo aggiornamento: Gennaio 2026</p>
+        <p class="last-updated">Ultimo aggiornamento: 28 Gennaio 2026</p>
 
-        <h2>1. Introduzione</h2>
-        <p>AllergiApp è impegnata a proteggere la privacy degli utenti. Questa Privacy Policy spiega come raccogliamo, utilizziamo e proteggiamo i tuoi dati personali quando utilizzi la nostra applicazione mobile.</p>
+        <h2>Chi siamo</h2>
+        <p>AllergiApp è un'applicazione mobile gratuita per comunicare allergie alimentari durante i viaggi.</p>
 
-        <h2>2. Dati che raccogliamo</h2>
-        <h3>2.1 Dati locali</h3>
-        <p>AllergiApp memorizza i seguenti dati esclusivamente sul tuo dispositivo:</p>
+        <h2>Quali dati raccogliamo</h2>
+
+        <h3>Dati memorizzati localmente (sul tuo dispositivo)</h3>
         <ul>
-            <li>Le allergie che hai selezionato</li>
-            <li>Le preferenze linguistiche (lingua dell'app e della card)</li>
-            <li>Le lingue scaricate per l'uso offline</li>
+            <li>Le tue allergie alimentari selezionate</li>
+            <li>Preferenze lingua</li>
+            <li>Traduzioni scaricate</li>
         </ul>
-        <p><strong>Importante:</strong> Questi dati NON vengono mai inviati ai nostri server o a terze parti. Rimangono privati sul tuo dispositivo.</p>
+        <p><strong>Questi dati NON vengono mai inviati a nostri server.</strong> Rimangono solo sul tuo dispositivo.</p>
 
-        <h3>2.2 Dati di Analytics</h3>
-        <p>Con il tuo consenso esplicito, raccogliamo dati anonimi di utilizzo tramite Firebase Analytics per migliorare l'app:</p>
+        <h3>Dati analytics anonimi</h3>
+        <p>Utilizziamo <strong>Google Firebase Analytics</strong> per migliorare l'app. Raccogliamo automaticamente:</p>
         <ul>
-            <li>Eventi di utilizzo dell'app (es. apertura app, visualizzazione card)</li>
-            <li>Informazioni tecniche (versione app, tipo dispositivo, sistema operativo)</li>
-            <li>Dati aggregati e anonimi sull'uso delle funzionalità</li>
+            <li>Paese e città approssimativa (da indirizzo IP)</li>
+            <li>Tipo di dispositivo e sistema operativo</li>
+            <li>Lingua del dispositivo</li>
+            <li>Utilizzo dell'app (quali schermate visiti, quali funzioni usi)</li>
+            <li>Statistiche su allergie più comuni (aggregate e anonime)</li>
+            <li>Lingue più scaricate</li>
         </ul>
-        <p>Questi dati sono completamente anonimi e non possono essere ricondotti a te personalmente.</p>
+        <p><strong>Non raccogliamo</strong>: nome, email, indirizzo, numero di telefono o altri dati che ti identificano personalmente.</p>
 
-        <h2>3. Come utilizziamo i tuoi dati</h2>
-        <p>Utilizziamo i dati raccolti per:</p>
+        <h3>Servizi di traduzione</h3>
+        <p>Quando scarichi lingue aggiuntive, i testi degli allergeni vengono inviati a servizi di traduzione esterni per essere tradotti. Non vengono inviati tuoi dati personali.</p>
+
+        <h2>Perché raccogliamo questi dati</h2>
         <ul>
-            <li>Fornire e migliorare i servizi dell'app</li>
-            <li>Comprendere come viene utilizzata l'app</li>
-            <li>Identificare e risolvere problemi tecnici</li>
-            <li>Sviluppare nuove funzionalità basate sulle esigenze degli utenti</li>
-        </ul>
-
-        <h2>4. Servizi di terze parti</h2>
-        <h3>4.1 Firebase Analytics</h3>
-        <p>Utilizziamo Firebase Analytics (Google) per raccogliere dati anonimi di utilizzo. Puoi consultare la <a href="https://firebase.google.com/support/privacy" target="_blank">Privacy Policy di Firebase</a>.</p>
-
-        <h3>4.2 LibreTranslate API</h3>
-        <p>Per il download delle lingue, utilizziamo il servizio LibreTranslate. Le richieste di traduzione vengono inviate al servizio ma non contengono informazioni personali identificabili.</p>
-
-        <h2>5. I tuoi diritti</h2>
-        <p>Hai il diritto di:</p>
-        <ul>
-            <li>Revocare il consenso agli analytics in qualsiasi momento dalle impostazioni dell'app</li>
-            <li>Eliminare tutti i tuoi dati locali disinstallando l'app</li>
-            <li>Richiedere informazioni sui dati che abbiamo raccolto</li>
-            <li>Presentare un reclamo all'autorità di protezione dei dati</li>
+            <li><strong>Dati locali</strong>: Per far funzionare l'app e mostrare le tue allergie</li>
+            <li><strong>Analytics</strong>: Per capire come migliorare l'app, quali lingue aggiungere, quali allergie sono più comuni</li>
         </ul>
 
-        <h2>6. Sicurezza dei dati</h2>
-        <p>Implementiamo misure di sicurezza appropriate per proteggere i tuoi dati. Tuttavia, nessun metodo di trasmissione su Internet o archiviazione elettronica è sicuro al 100%.</p>
+        <h2>Base giuridica (GDPR)</h2>
+        <p>La raccolta di analytics anonimi si basa sul nostro <strong>legittimo interesse</strong> a migliorare l'app. Poiché i dati sono completamente anonimi e aggregati, non ti identificano in alcun modo.</p>
 
-        <h2>7. Privacy dei minori</h2>
-        <p>AllergiApp non raccoglie intenzionalmente dati di minori di 13 anni. Se sei un genitore o tutore e ritieni che tuo figlio ci abbia fornito dati personali, contattaci.</p>
+        <h2>Trasferimento dati</h2>
+        <p>I dati analytics anonimi vengono elaborati da <strong>Google LLC</strong> (USA) tramite Firebase. Google utilizza le Standard Contractual Clauses (SCC) approvate dalla Commissione Europea per garantire la protezione dei dati.</p>
 
-        <h2>8. Modifiche a questa policy</h2>
-        <p>Potremmo aggiornare questa Privacy Policy periodicamente. Ti informeremo di eventuali modifiche pubblicando la nuova policy su questa pagina e aggiornando la data di "Ultimo aggiornamento".</p>
+        <h2>I tuoi diritti</h2>
+        <p>Poiché non raccogliamo dati personali identificabili, non applichiamo i diritti GDPR tradizionali (accesso, rettifica, cancellazione) in quanto non possiamo associare i dati analytics a te specificamente.</p>
+        <p>Tuttavia:</p>
+        <ul>
+            <li><strong>Disinstallando l'app</strong>, cancelli tutti i dati locali (allergie, preferenze)</li>
+            <li><strong>Nelle impostazioni</strong>, puoi resettare completamente i dati dell'app</li>
+        </ul>
 
-        <h2>9. Contattaci</h2>
-        <p>Per qualsiasi domanda riguardo questa Privacy Policy, contattaci a:</p>
-        <p><strong>Email:</strong> <a href="mailto:privacy@allergiapp.com">privacy@allergiapp.com</a></p>
+        <h2>Conservazione dati</h2>
+        <ul>
+            <li><strong>Dati locali</strong>: Conservati finché non disinstalli l'app o li cancelli manualmente</li>
+            <li><strong>Analytics</strong>: Conservati da Google Firebase secondo le loro policy (solitamente 14 mesi)</li>
+        </ul>
+
+        <h2>Modifiche a questa policy</h2>
+        <p>Potremmo aggiornare questa privacy policy. La data dell'ultimo aggiornamento è indicata in alto. Ti informeremo di modifiche significative tramite aggiornamento app.</p>
+
+        <h2>Bambini</h2>
+        <p>L'app è destinata a utenti di tutte le età. Non raccogliamo consapevolmente dati personali di minori di 16 anni. Se sei un genitore e scopri che tuo figlio ha fornito dati personali (anche se l'app non li richiede), contattaci.</p>
+
+        <h2>Contatti</h2>
+        <p>Per domande su questa privacy policy: <a href="mailto:privacy@allergiapp.com">privacy@allergiapp.com</a></p>
+
+        <hr style="margin: 40px 0; border: none; border-top: 1px solid #ddd;">
+
+        <p style="font-style: italic; text-align: center; color: #666;">Questa privacy policy è conforme al Regolamento Generale sulla Protezione dei Dati (GDPR) dell'Unione Europea.</p>
     </div>
 
     <footer class="footer">
