Update Terms of Service to match app version

--- a/terms.html
+++ b/terms.html
@@ -78,85 +78,93 @@
         <a href="index.html" class="back-link">← Torna alla home</a>
 
         <h1>Termini di Servizio</h1>
-        <p class="last-updated">Ultimo aggiornamento: Gennaio 2026</p>
+        <p class="last-updated">Ultimo aggiornamento: 28 Gennaio 2026</p>
+
+        <h2>Accettazione dei Termini</h2>
+        <p>Utilizzando AllergiApp, accetti questi Termini di Servizio. Se non accetti, non utilizzare l'app.</p>
+
+        <h2>Descrizione del Servizio</h2>
+        <p>AllergiApp è un'applicazione mobile gratuita che ti aiuta a comunicare le tue allergie alimentari in diverse lingue.</p>
+        <p><strong>AllergiApp è uno strumento di comunicazione, NON un dispositivo medico.</strong></p>
+
+        <h2>Uso dell'App</h2>
+
+        <h3>Puoi:</h3>
+        <ul>
+            <li>Utilizzare l'app per scopi personali</li>
+            <li>Salvare le tue allergie sul tuo dispositivo</li>
+            <li>Scaricare traduzioni in diverse lingue</li>
+            <li>Mostrare la card allergie a ristoranti/personale</li>
+        </ul>
+
+        <h3>NON puoi:</h3>
+        <ul>
+            <li>Usare l'app per scopi commerciali senza permesso</li>
+            <li>Modificare, decompilare o fare reverse engineering dell'app</li>
+            <li>Rimuovere copyright o avvisi proprietari</li>
+            <li>Usare l'app in modo che violi leggi locali</li>
+        </ul>
+
+        <h2>Limitazione di Responsabilità</h2>
 
         <div class="warning-box">
-            <p><strong>⚠️ Avviso Importante:</strong> AllergiApp è uno strumento di comunicazione e non sostituisce il consiglio medico professionale. Consulta sempre un medico per questioni di salute.</p>
+            <p><strong>IMPORTANTE - DISCLAIMER MEDICO</strong></p>
+            <p><strong>AllergiApp NON sostituisce il parere medico professionale.</strong></p>
+            <p>L'app è fornita "COSÌ COM'È" senza garanzie di alcun tipo.</p>
         </div>
 
-        <h2>1. Accettazione dei Termini</h2>
-        <p>Utilizzando AllergiApp ("l'App"), accetti di essere vincolato da questi Termini di Servizio. Se non accetti questi termini, non utilizzare l'App.</p>
-
-        <h2>2. Descrizione del Servizio</h2>
-        <p>AllergiApp è un'applicazione mobile che ti aiuta a comunicare le tue allergie alimentari in diverse lingue. L'App fornisce:</p>
+        <h3>NON GARANTIAMO:</h3>
         <ul>
-            <li>Selezione di allergie comuni da un elenco predefinito</li>
-            <li>Traduzione delle allergie in più di 100 lingue</li>
-            <li>Visualizzazione di una card informativa da mostrare al personale di ristoranti e cucine</li>
-            <li>Download di lingue per uso offline</li>
+            <li>La completezza o accuratezza delle traduzioni</li>
+            <li>L'assenza di errori o imprecisioni</li>
+            <li>Che l'app funzioni ininterrottamente</li>
+            <li>L'assenza di contaminazioni crociate negli alimenti</li>
+            <li>La corretta comprensione delle informazioni da parte del personale</li>
         </ul>
 
-        <h2>3. Limitazioni e Responsabilità</h2>
-        <h3>3.1 Non è un dispositivo medico</h3>
-        <p>AllergiApp è uno strumento di comunicazione e NON è un dispositivo medico. Non fornisce diagnosi, trattamenti o consigli medici.</p>
-
-        <h3>3.2 Accuratezza delle traduzioni</h3>
-        <p>Sebbene ci impegniamo a fornire traduzioni accurate, non possiamo garantire la perfezione assoluta di tutte le traduzioni. Ti consigliamo di:</p>
+        <h3>IN CASO DI ALLERGIE GRAVI:</h3>
         <ul>
-            <li>Verificare le traduzioni quando possibile</li>
-            <li>Portare sempre con te farmaci di emergenza prescritti dal medico</li>
-            <li>Informare il personale medico locale delle tue allergie</li>
+            <li>Porta sempre con te i farmaci prescritti (es. adrenalina auto-iniettabile)</li>
+            <li>Informa SEMPRE il personale verbalmente delle tue allergie</li>
+            <li>Non affidarti esclusivamente a questa app</li>
+            <li>In caso di dubbio, non consumare l'alimento</li>
         </ul>
 
-        <h3>3.3 Limitazione di responsabilità</h3>
-        <p>AllergiApp e i suoi sviluppatori non sono responsabili per:</p>
+        <h3>Esclusione di Responsabilità</h3>
+        <p>Nei limiti consentiti dalla legge, gli sviluppatori di AllergiApp NON SONO RESPONSABILI per:</p>
         <ul>
-            <li>Reazioni allergiche o problemi di salute derivanti dall'uso dell'App</li>
-            <li>Errori di traduzione o comunicazione</li>
-            <li>Incomprensioni con il personale di ristoranti o strutture</li>
-            <li>Perdita di dati o malfunzionamenti tecnici</li>
+            <li>Reazioni allergiche di qualsiasi tipo</li>
+            <li>Danni diretti, indiretti, incidentali o consequenziali</li>
+            <li>Perdita di dati</li>
+            <li>Malfunzionamenti dell'app</li>
+            <li>Traduzioni errate o incomplete</li>
         </ul>
+        <p><strong>L'utente si assume ogni responsabilità nell'uso dell'applicazione per comunicare le proprie allergie.</strong></p>
 
-        <h2>4. Uso Appropriato</h2>
-        <p>Accetti di utilizzare l'App:</p>
-        <ul>
-            <li>In modo responsabile e in conformità con tutte le leggi applicabili</li>
-            <li>Come strumento supplementare, non come unico metodo di comunicazione delle allergie</li>
-            <li>Insieme a misure di sicurezza appropriate (es. braccialetti medici, farmaci di emergenza)</li>
-        </ul>
-
-        <h2>5. Proprietà Intellettuale</h2>
-        <p>Tutti i contenuti dell'App, inclusi testi, grafica, loghi e software, sono di proprietà di AllergiApp o dei suoi licenziatari e sono protetti dalle leggi sul copyright.</p>
-
-        <h2>6. Privacy</h2>
-        <p>Il tuo utilizzo dell'App è soggetto anche alla nostra <a href="privacy.html">Privacy Policy</a>. Ti invitiamo a leggerla attentamente.</p>
-
-        <h2>7. Modifiche al Servizio</h2>
+        <h2>Modifiche all'App</h2>
         <p>Ci riserviamo il diritto di:</p>
         <ul>
-            <li>Modificare o interrompere l'App in qualsiasi momento</li>
-            <li>Aggiornare questi Termini di Servizio</li>
-            <li>Modificare le funzionalità disponibili</li>
+            <li>Modificare o interrompere l'app in qualsiasi momento</li>
+            <li>Aggiornare queste condizioni</li>
         </ul>
-        <p>Le modifiche sostanziali ti saranno comunicate attraverso l'App.</p>
+        <p>Ti informeremo di modifiche significative tramite aggiornamenti dell'app.</p>
 
-        <h2>8. Risoluzione</h2>
-        <p>Possiamo sospendere o terminare il tuo accesso all'App se violi questi termini o se lo riteniamo necessario per proteggere noi stessi o altri utenti.</p>
+        <h2>Proprietà Intellettuale</h2>
+        <p>AllergiApp, il suo design, logo e contenuti sono protetti da diritti d'autore.</p>
+        <p>Copyright © 2026 AllergiApp. Tutti i diritti riservati.</p>
 
-        <h2>9. Legge Applicabile</h2>
-        <p>Questi termini sono regolati dalle leggi italiane. Qualsiasi controversia sarà risolta presso i tribunali competenti in Italia.</p>
+        <h2>Legge Applicabile</h2>
+        <p>Questi termini sono regolati dalla legge italiana.</p>
 
-        <h2>10. Disclaimer Medico</h2>
-        <div class="warning-box">
-            <p><strong>IMPORTANTE:</strong> Se hai una reazione allergica, cerca immediatamente assistenza medica. Non fare affidamento solo su AllergiApp in situazioni di emergenza. Porta sempre con te i farmaci prescritti dal medico (es. EpiPen) e informa il personale medico delle tue allergie.</p>
-        </div>
+        <h2>Severability</h2>
+        <p>Se una clausola di questi termini è ritenuta invalida, le altre clausole rimangono valide.</p>
 
-        <h2>11. Contatti</h2>
-        <p>Per domande su questi Termini di Servizio, contattaci a:</p>
-        <p><strong>Email:</strong> <a href="mailto:legal@allergiapp.com">legal@allergiapp.com</a></p>
+        <h2>Contatti</h2>
+        <p>Per domande sui Termini di Servizio: <a href="mailto:legal@allergiapp.com">legal@allergiapp.com</a></p>
 
-        <h2>12. Accettazione</h2>
-        <p>Utilizzando AllergiApp, confermi di aver letto, compreso e accettato questi Termini di Servizio e la Privacy Policy.</p>
+        <hr style="margin: 40px 0; border: none; border-top: 1px solid #ddd;">
+
+        <p style="font-weight: bold; text-align: center;"><strong>Utilizzando AllergiApp, confermi di aver letto, compreso e accettato questi Termini di Servizio e il Disclaimer medico.</strong></p>
     </div>
 
     <footer class="footer">
