--- a/index.html
+++ b/index.html
@@ -225,35 +225,18 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <div class="footer-content">
-                <div class="footer-brand">
-                    <div class="logo">
-                        <span class="logo-icon">🛡️</span>
-                        <span class="logo-text">AllergiApp</span>
-                    </div>
-                    <p>Viaggia sicuro, comunica ovunque.</p>
+            <div class="footer-simple">
+                <div class="logo">
+                    <span class="logo-icon">🛡️</span>
+                    <span class="logo-text">AllergiApp</span>
                 </div>
-                <div class="footer-links">
-                    <div class="footer-column">
-                        <h4>Prodotto</h4>
-                        <a href="#features">Funzionalità</a>
-                        <a href="#how-it-works">Come funziona</a>
-                        <a href="#download">Scarica</a>
-                    </div>
-                    <div class="footer-column">
-                        <h4>Legale</h4>
-                        <a href="privacy.html">Privacy Policy</a>
-                        <a href="terms.html">Termini di Servizio</a>
-                    </div>
-                    <div class="footer-column">
-                        <h4>Supporto</h4>
-                        <a href="mailto:support@allergiapp.com">Contattaci</a>
-                        <a href="https://github.com/looklight/allergiapp">GitHub</a>
-                    </div>
+                <p class="footer-tagline">Viaggia sicuro, comunica ovunque.</p>
+                <div class="footer-legal">
+                    <a href="privacy.html">Privacy Policy</a>
+                    <span class="separator">•</span>
+                    <a href="terms.html">Termini di Servizio</a>
                 </div>
-            </div>
-            <div class="footer-bottom">
-                <p>&copy; 2026 AllergiApp. Tutti i diritti riservati.</p>
+                <p class="footer-copyright">&copy; 2026 AllergiApp. Tutti i diritti riservati.</p>
             </div>
         </div>
     </footer>
