--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <nav class="nav">
             <div class="nav-content">
                 <div class="logo">
-                    <span class="logo-icon">🛡️</span>
+                    <img src="images/happyplate.jpg" alt="AllergiApp" class="logo-icon">
                     <span class="logo-text">AllergiApp</span>
                 </div>
                 <div class="nav-links">
@@ -227,7 +227,7 @@
         <div class="container">
             <div class="footer-simple">
                 <div class="logo">
-                    <span class="logo-icon">🛡️</span>
+                    <img src="images/happyplate.jpg" alt="AllergiApp" class="logo-icon">
                     <span class="logo-text">AllergiApp</span>
                 </div>
                 <p class="footer-tagline">Viaggia sicuro, comunica ovunque.</p>
