--- a/privacy.html
+++ b/privacy.html
@@ -54,7 +54,7 @@
     <nav class="nav">
         <div class="nav-content">
             <div class="logo">
-                <span class="logo-icon">🛡️</span>
+                <img src="images/happyplate.jpg" alt="AllergiApp" class="logo-icon">
                 <span class="logo-text">AllergiApp</span>
             </div>
             <div class="nav-links">
