Switch to PNG logo with transparent background

--- a/terms.html
+++ b/terms.html
@@ -65,7 +65,7 @@
     <nav class="nav">
         <div class="nav-content">
             <div class="logo">
-                <img src="images/happyplate.jpg" alt="AllergiApp" class="logo-icon">
+                <img src="images/happyplate.png" alt="AllergiApp" class="logo-icon">
                 <span class="logo-text">AllergiApp</span>
             </div>
             <div class="nav-links">
