Add hero image and download icon with responsive layout

--- a/index.html
+++ b/index.html
@@ -30,22 +30,27 @@
         </nav>
 
         <div class="hero-content">
-            <h1 class="hero-title">
-                Viaggia sereno.<br>
-                <span class="gradient-text">Le tue allergie, in ogni lingua.</span>
-            </h1>
-            <p class="hero-subtitle">
-                Comunica le tue allergie alimentari in più di 100 lingue.<br>
-                Mostra una card chiara e comprensibile a camerieri e chef in tutto il mondo.
-            </p>
-            <div class="hero-cta">
-                <a href="#download" class="button primary">
-                    <span>Scarica gratis</span>
-                    <svg width="20" height="20" viewBox="0 0 20 20" fill="none">
-                        <path d="M10 3V13M10 13L6 9M10 13L14 9M3 17H17" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
-                    </svg>
-                </a>
-                <a href="#how-it-works" class="button secondary">Scopri come funziona</a>
+            <div class="hero-text">
+                <h1 class="hero-title">
+                    Viaggia sereno.<br>
+                    <span class="gradient-text">Le tue allergie, in ogni lingua.</span>
+                </h1>
+                <p class="hero-subtitle">
+                    Comunica le tue allergie alimentari in più di 100 lingue.<br>
+                    Mostra una card chiara e comprensibile a camerieri e chef in tutto il mondo.
+                </p>
+                <div class="hero-cta">
+                    <a href="#download" class="button primary">
+                        <span>Scarica gratis</span>
+                        <svg width="20" height="20" viewBox="0 0 20 20" fill="none">
+                            <path d="M10 3V13M10 13L6 9M10 13L14 9M3 17H17" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+                        </svg>
+                    </a>
+                    <a href="#how-it-works" class="button secondary">Scopri come funziona</a>
+                </div>
+            </div>
+            <div class="hero-image">
+                <img src="images/happyplate.png" alt="AllergiApp - Viaggia sicuro">
             </div>
             <div class="hero-stats">
                 <div class="stat">
@@ -192,6 +197,7 @@
     <!-- Download Section -->
     <section id="download" class="download">
         <div class="container">
+            <img src="images/happyplate.png" alt="AllergiApp" class="download-icon">
             <h2 class="section-title">Scarica AllergiApp</h2>
             <p class="section-subtitle">Disponibile gratuitamente su App Store e Google Play</p>
             <div class="download-buttons">
