Remove specific allergen count (14) from website

--- a/index.html
+++ b/index.html
@@ -54,10 +54,6 @@
             </div>
             <div class="hero-stats">
                 <div class="stat">
-                    <div class="stat-number">14</div>
-                    <div class="stat-label">Allergeni supportati</div>
-                </div>
-                <div class="stat">
                     <div class="stat-number">60+</div>
                     <div class="stat-label">Lingue disponibili</div>
                 </div>
@@ -103,7 +99,7 @@
                 <div class="feature-card">
                     <div class="feature-icon">🎯</div>
                     <h3>Selezione personalizzata</h3>
-                    <p>Scegli le tue allergie tra 14 allergeni comuni riconosciuti a livello internazionale</p>
+                    <p>Scegli le tue allergie tra gli allergeni comuni riconosciuti a livello internazionale</p>
                 </div>
 
                 <div class="feature-card">
@@ -148,7 +144,7 @@
                     <div class="step-number">1</div>
                     <div class="step-content">
                         <h3>Seleziona le tue allergie</h3>
-                        <p>Scegli una o più allergie dalla lista completa di 14 allergeni</p>
+                        <p>Scegli una o più allergie dalla lista completa degli allergeni</p>
                     </div>
                 </div>
 
