Add personal story section explaining why app is free
- Added Story section with personal motivation behind the app
- Explained the origin from traveling with allergies
- Mentioned ad-supported model with donation option
- Added two visual cards highlighting mission and support
- Responsive layout for mobile devices

--- a/index.html
+++ b/index.html
@@ -167,6 +167,60 @@
         </div>
     </section>
 
+    <!-- Story Section -->
+    <section class="story">
+        <div class="container">
+            <div class="story-content">
+                <div class="story-text">
+                    <h2 class="section-title">Perché è gratuita?</h2>
+                    <div class="story-body">
+                        <p class="story-intro">
+                            Questa app nasce da un'esperienza personale. Come persona con allergie alimentari,
+                            ho sempre amato viaggiare e scoprire nuove culture attraverso il cibo.
+                        </p>
+                        <p>
+                            Durante i miei viaggi, ho imparato che la barriera linguistica può trasformare
+                            un'esperienza culinaria in un momento di ansia. Ho iniziato a scrivere a mano piccole
+                            card con le mie allergie, poi a stamparle, e ho scoperto quanto fossero preziose
+                            per comunicare con camerieri e chef che non parlavano la mia lingua.
+                        </p>
+                        <p>
+                            <strong>Un gesto semplice - mostrare una card - cambiava tutto.</strong>
+                            Il personale del ristorante apprezzava la chiarezza, io mi sentivo più sicuro,
+                            e finalmente potevo godermi la cucina locale senza paura.
+                        </p>
+                        <p>
+                            Ho creato AllergiApp per portare questa soluzione a chiunque ne abbia bisogno.
+                            È gratuita perché <strong>viaggiare e gustare il cibo del mondo dovrebbe essere
+                            un diritto per tutti</strong>, non un privilegio. Se questa app può aiutare anche
+                            solo una persona a godersi un pasto in più durante un viaggio, avrà raggiunto il suo scopo.
+                        </p>
+                        <p>
+                            L'app include pubblicità non invasive per coprire i costi di sviluppo e mantenimento.
+                            Se apprezzi il progetto e vuoi supportarlo, puoi contribuire con una donazione
+                            per aiutarmi a mantenerla gratuita e migliorarla nel tempo. ❤️
+                        </p>
+                        <p class="story-signature">
+                            — Con il desiderio di rendere il mondo più accessibile, un viaggiatore alla volta 🌍
+                        </p>
+                    </div>
+                </div>
+                <div class="story-visual">
+                    <div class="story-card">
+                        <div class="story-icon">✈️</div>
+                        <h3>La mia missione</h3>
+                        <p>Aiutare persone con allergie a esplorare il mondo attraverso il cibo, in sicurezza e con gioia</p>
+                    </div>
+                    <div class="story-card">
+                        <div class="story-icon">💝</div>
+                        <h3>Supporta il progetto</h3>
+                        <p>Gratuita per sempre. Puoi contribuire con una donazione per aiutare lo sviluppo e il mantenimento</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Allergens Preview -->
     <section class="allergens-preview">
         <div class="container">
