Add allergen orbit animation around plate in hero section
- Added 8 allergen images (peanut, nut, milk, egg, wheat, prawn, mussel, cheese)
- Created circular orbit animation around central plate
- Allergens rotate slowly (20s) with floating effect
- Responsive design: smaller orbit and icons on mobile
- Visual metaphor: allergens kept at safe distance from the plate
- Smooth hover effects with scale and opacity

--- a/index.html
+++ b/index.html
@@ -50,7 +50,36 @@
                 </div>
             </div>
             <div class="hero-image">
-                <img src="images/happyplate.png" alt="AllergiApp - Viaggia sicuro">
+                <div class="allergen-orbit">
+                    <!-- Centro: il piatto protetto -->
+                    <img src="images/happyplate.png" alt="AllergiApp - Viaggia sicuro" class="plate-center">
+
+                    <!-- Allergeni che orbitano -->
+                    <div class="allergen-item allergen-1">
+                        <img src="images/img_peanut.png" alt="Arachidi">
+                    </div>
+                    <div class="allergen-item allergen-2">
+                        <img src="images/img_nut.png" alt="Noci">
+                    </div>
+                    <div class="allergen-item allergen-3">
+                        <img src="images/img_milk.png" alt="Latte">
+                    </div>
+                    <div class="allergen-item allergen-4">
+                        <img src="images/img_egg.png" alt="Uova">
+                    </div>
+                    <div class="allergen-item allergen-5">
+                        <img src="images/img_wheat.png" alt="Grano">
+                    </div>
+                    <div class="allergen-item allergen-6">
+                        <img src="images/img_prawn.png" alt="Gamberi">
+                    </div>
+                    <div class="allergen-item allergen-7">
+                        <img src="images/img_mussel.png" alt="Molluschi">
+                    </div>
+                    <div class="allergen-item allergen-8">
+                        <img src="images/img_cheese.png" alt="Formaggio">
+                    </div>
+                </div>
             </div>
             <div class="hero-stats">
                 <div class="stat">
