--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
                         </p>
 
                         <!-- Support Section -->
-                        <div class="story-support-inline">
+                        <div id="supporto" class="story-support-inline">
                             <a href="https://ko-fi.com/allergiapp" target="_blank" rel="noopener noreferrer" class="donation-button">
                                 <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                                     <path d="M18 8h1a4 4 0 0 1 0 8h-1"></path>
